# devscope

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  artifacts.rs  cli.rs  commands.rs  config.rs  detect.rs  discover.rs  git.rs  health.rs  input.rs  main.rs  ports.rs  project.rs  scanner.rs  scoring.rs  snapshot.rs  tui.rs
src/ui/: details.rs  footer.rs  layout.rs  mod.rs  table.rs  theme.rs
