[package]
name = "devscope"
version = "0.1.0"
edition = "2021"
description = "A fast local project scanner and TUI dashboard for developers"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
ignore = "0.4"
walkdir = "2"
rayon = "1"
git2 = "0.19"
chrono = "0.4"
anyhow = "1"
unicode-width = "0.2"
dunce = "1"
open = "5"
listeners = "0.5"

[dev-dependencies]
tempfile = "3"
